--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^15.2.0",
     "lodash": "^4.17.15",
+    "mongoose": "^5.9.21",
     "nodemon": "^2.0.4"
   }
 }
